# doodba-scaffolding

./: .env.jinja  copier.yml  docker-compose.common.yaml.jinja  docker-compose.prod.yaml.jinja  pyproject.toml  test.yaml.jinja
odoo/: Dockerfile
