[tool.poetry]
name = "doodba-scaffolding"
version = "0.1.0"
description = "Copier template to maintain Doodba integration projects"
authors = ["Jairo Llopis <jairo.llopis@tecnativa.com>"]
license = "BSL-1.0"

[tool.poetry.dependencies]
python = "^3.6"
copier = {git = "https://github.com/pykong/copier.git", rev = "v2.5.1-175-geb8bfa7"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
